working on div as class and logos, added css file with class

--- a/code/cesar/html_css/lab01_bio/main.html
+++ b/code/cesar/html_css/lab01_bio/main.html
@@ -16,7 +16,7 @@
 
         <div class="header">
 
-        <img src="TempleOS_logo.png" class="logo"><h1>The Life of Terry Davis</h1><img src="TempleOS_logo.png" class="logo">
+        <img src="TempleOS_logo.png" class="logo"><img src="TempleOS_logo.png" class="logo">
         </div>
         <div class="main">
 
