added picture of terry, ordered list, links and css

--- a/code/cesar/html_css/lab01_bio/main.html
+++ b/code/cesar/html_css/lab01_bio/main.html
@@ -19,7 +19,7 @@
         <img src="TempleOS_logo.png" class="logo"><img src="TempleOS_logo.png" class="logo">
         </div>
         <div class="main">
-
+            <img src="terrydavis.jpg" id="terryimage">
             <h1>Early Years:</h1>
             <p>Terry A. Davis was born Terrence Andrew Davis on December 15, 1969 in West Allis, Wisconsin. He is best know for creating the contreversial operating system (OS) named TempleOS.</p>            </p>
             <h3>Career:</h3>
@@ -28,10 +28,14 @@
             <p>The one thing that is clear is that Terry was diagnosed with schizophrenia.</p>
             <h3>TempleOS:</h3>
             <p>Around 2004 and 2005 Terry started to work on a project he at the time called LoseThos. This project would later be know as TempleOS. Inspired by the Commedore 64 DOS style interface, he sought to recreate it. </p>
+            <p><a href="https://en.wikipedia.org/wiki/Terry_A._Davis" target="_blank">wikipedia</a></p>
+            <div id="list">
+                <ul>
+                    <ol>Wisconsin</ol>
+                    <ol>Las Vegas</ol>
+                </ul>
+            </div>
         </div>
-    
     </div>
-
-
 </body>
 </html>
