--- a/code/rob/html/lab1/bio.html
+++ b/code/rob/html/lab1/bio.html
@@ -61,7 +61,10 @@
         <a href="https://www.leagueoflegends.com/en-us/champions/sylas/">about</a>
       </div>
     </div>
-    <!-- import external javascript  -->
-    <script></script>
+    <footer>
+      <div>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint aperiam laboriosam consequatur, cumque sunt ullam quis!</p>
+      </div>
+    </footer>
   </body>
 </html>
